<resources>
    <string name="app_name" translatable="false">PickApp</string>

    <string name="home" translatable="false">Home</string>
    <string name="location">Near you</string>
    <string name="calendar">Calendar</string>
    <string name="account">Account</string>

    <string name="password" translatable="false">Password</string>
    <string name="email" translatable="false">Email</string>

    <string name="login">Log in</string>
    <string name="signUp">Sign up</string>
    <string name="choiceSport">Choose your favorite Sport</string>
    <string name="choiceSportExperience">Choose your Sport Experience</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="finish">Finish</string>
    <string name="Logo">Logo</string>

    <string-array name="sports_array">
        <item>Soccer</item>
        <item>Basketball</item>
        <item>Tennis</item>
        <item>Football</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="nickname">Nickname</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="title_activity_loading" translatable="false">activity_loading</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="Field">Field</string>
    <string name="send">Send</string>
    <string name="forgotPasswordLogin">Recover your password</string>
    <string name="myGames">Calendar</string>
    <string name="welcomeText">Welcome</string>
    <string name="backgroundProfile">background profile image</string>
    <string name="accountName">account name</string>
    <string name="forgotPassword">Send email to reset password</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="matches">Matches</string>
    <string name="followers" translatable="false">Followers</string>
    <string name="following" translatable="false">Following</string>
    <string name="currentDate">Current date</string>
    <string name="bio" translatable="false">Bio</string>
    <string name="played">Played</string>
    <string name="won">Won</string>
    <string name="editProfile">Edit profile</string>
    <string name="cancel">Delete</string>
    <string name="done">Save</string>
    <string name="editPhoto">Change your profile photo</string>
    <string name="date">Date</string>
    <string name="matches_list_map">Matches list map</string>
    <string name="addMatchTitle">Add match</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="sport">Sport</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string name="soccer">Soccer</string>
    <string name="tennis">Tennis</string>
    <string name="add">Add</string>
    <string name="time">Time</string>
    <string name="address">Address</string>
    <string name="create">Create</string>
    <string name="editSuccess">Match edited successfully</string>
    <string name="editFailure">Failed to edit this match</string>
    <string name="choosePlaceMessage">You must choose place</string>
    <string name="invalidTimeDate">Invalid time or date</string>
    <string name="teamNumber">Number of teams</string>
    <string name="cost">Cost</string>
    <string name="privateMatch">Private match</string>
    <string name="enable_gps">Enable GPS on your device to share your location with the app</string>
    <string name="search_match">Search match</string>
    <string name="select">select</string>
    <string name="options">Options</string>
    <string name="createGame">Create a game</string>
    <string name="delete">delete</string>
    <string name="join">join</string>
    <string name="leave">leave</string>
    <string name="save">save</string>
    <string name="match">Match</string>
    <string name="place">Place</string>
    <string name="hideShowButton">Hide/show calendar</string>
    <string name="invalidCost">Invalid cost</string>
    <string name="invalidNumOfTeams">Number of teams is not valid</string>
    <string name="invalidTitle">Title can\'t be empty</string>
    <string name="experience">Experience</string>
    <string name="reliability">Reliability</string>
    <string name="myMatches">My Matches</string>
    <string name="participants">Participants</string>
    <string name="background">background</string>

    <string name="loginSuccess">Login Successful</string>
    <string name="authenticationFailed">Authentication Failed</string>
    <string name="registrationFailed">Registration Failed</string>
    <string name="registrationSuccess">Registration Successful</string>
    <string name="errorName">name required!</string>
    <string name="errorSurname">surename required!</string>
    <string name="errorNickname">nickname required!</string>
    <string name="errorEmail">email required!</string>
    <string name="errorEmailValid">enter a valid email!"</string>
    <string name="errorPassword">password required!</string>
    <string name="errorPasswordLenght">a password of at least 6 characters is required!</string>
    <string name="dataAdded">Data Added</string>
    <string name="dataAddFail">Fail to add data</string>
    <string name="selectExpLevel">Select your experience level</string>


</resources>