<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/location"
        android:enabled="true"
        android:icon="@drawable/ic_outline_location_on_24"
        android:title="@string/location" />
    <item
        android:id="@+id/calendar"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="@string/calendar" />
    <item
        android:id="@+id/account"
        android:enabled="true"
        android:icon="@drawable/ic_outline_person_24"
        android:title="@string/account" />
</menu>