<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation_graph"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="it.unimib.pickapp.ui.homeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/location"
        android:name="it.unimib.pickapp.ui.locationFragment"
        android:label="@string/location"
        tools:layout="@layout/fragment_location" />
    <fragment
        android:id="@+id/calendar"
        android:name="it.unimib.pickapp.ui.calendarFragment"
        android:label="@string/myGames"
        tools:layout="@layout/fragment_calendar">
        <action
            android:id="@+id/calendar_to_match"
            app:destination="@id/matchFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/account"
        android:name="it.unimib.pickapp.ui.accountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/matchFragment"
        android:name="it.unimib.pickapp.ui.MatchFragment"
        android:label="fragment_match"
        tools:layout="@layout/fragment_match">
        <action
            android:id="@+id/matchFragment_select_placeFragment"
            app:destination="@id/placeFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/placeFragment"
        android:name="it.unimib.pickapp.ui.PlaceFragment"
        android:label="place_fragment_item_list"
        tools:layout="@layout/place_fragment_item_list" />
</navigation>