<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MatchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/match"
            android:textColor="@color/mainGreen"
            android:textSize="28sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMatch">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/title"
                    android:textSize="15sp"
                    android:textColorHint="@color/gray"
                    android:textColor="@drawable/color_text_view"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/sportLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textSize="15sp"
                    android:text="@string/sport" />

                <Spinner
                    android:id="@+id/sportSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/locationLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/locationInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:hint="@string/place"
                        android:textColorHint="@color/gray"
                        android:importantForAutofill="no"
                        android:inputType="textLongMessage"
                        android:background="@color/transparent"
                        android:minHeight="48dp"
                        android:textSize="15sp"
                        android:textColor="@drawable/color_text_view"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/selectLocationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/select"
                    app:backgroundTint="@color/buttonColor"
                    android:layout_gravity="center_vertical"
                    android:textSize="13sp"
                    app:cornerRadius="30dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dateLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date"
                        android:textColorHint="@color/gray"
                        android:background="@color/transparent"
                        android:textSize="15sp"
                        android:inputType="date"
                        android:textColor="@drawable/color_text_view"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/selectDateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select"
                    android:layout_marginStart="12dp"
                    app:backgroundTint="@color/buttonColor"
                    android:layout_gravity="center_vertical"
                    app:cornerRadius="30dp"
                    android:textSize="13sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/timeLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/time"
                        android:textColorHint="@color/gray"
                        android:background="@color/transparent"
                        android:inputType="time"
                        android:textSize="15sp"
                        android:textColor="@drawable/color_text_view"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/selectTimeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/select"
                    android:layout_gravity="center_vertical"
                    app:backgroundTint="@color/buttonColor"
                    app:cornerRadius="30dp"
                    android:textSize="13sp"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNumberOfTeams"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/teamNumber"
                    android:inputType="number"
                    android:textColorHint="@color/gray"
                    android:background="@color/transparent"
                    android:textSize="15sp"
                    android:textColor="@drawable/color_text_view"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:minHeight="48dp"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cost"
                    android:textColorHint="@color/gray"
                    android:background="@color/transparent"
                    android:inputType="number"
                    android:textSize="15sp"
                    android:textColor="@drawable/color_text_view"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/privateSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:text="@string/privateMatch"
                android:textColor="@color/semiBlack"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:minHeight="48dp"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="textLongMessage"
                    android:background="@color/transparent"
                    android:textSize="15sp"
                    android:textColorHint="@color/gray"
                    android:textColor="@drawable/color_text_view"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/participantLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginStart="9dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/participants"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/buttonColor"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/participantButton"
                    app:backgroundTint="@color/transparent"
                    app:tint="@color/buttonColor"
                    android:contentDescription="@string/participants"
                    android:src="@drawable/ic_baseline_chevron_right_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/save"
                    android:textSize="13sp"
                    app:backgroundTint="@color/buttonColor"
                    app:cornerRadius="30dp" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/delete"
                    android:textSize="13sp"
                    app:backgroundTint="@color/buttonColor"
                    app:cornerRadius="30dp" />

                <Button
                    android:id="@+id/joinButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/join"
                    android:textSize="13sp"
                    app:backgroundTint="@color/buttonColor"
                    app:cornerRadius="30dp" />

                <Button
                    android:id="@+id/leaveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/leave"
                    android:textSize="13sp"
                    app:backgroundTint="@color/buttonColor"
                    app:cornerRadius="30dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>